add change for modal css

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -16,6 +16,13 @@
 }
 
 .Modal {
+  /* width: 100px;
+  height: 100px; */
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
+}
+
+.img {
+  max-width: calc(100vw - 58px);
+  max-height: calc(100vh - 34px);
 }
